--- a/ClientSide/stylesheet.css
+++ b/ClientSide/stylesheet.css
@@ -1,3 +1,5 @@
+html, body {margin: 0; height: 100%; overflow: hidden}
+
 .nav-item2 {
     padding-left: 25px;
     padding-right: 25px;
@@ -22,4 +24,15 @@
 
 .active-btn {
     background-color: wheat !important;
+}
+
+#index-img-down-right {
+    position: absolute;
+    right: 0;
+    down: 0;
+}
+
+#index-img-smiley {
+    max-width: 100%;
+    max-height: 100%;
 }
