--- a/ClientSide/stylesheet.css
+++ b/ClientSide/stylesheet.css
@@ -36,3 +36,15 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     max-width: 100%;
     max-height: 100%;
 }
+
+#index-main-img {
+    height: 60%;
+}
+
+#index-right-backimg {
+    background-image: url(Pictures/Pfad_7.svg);
+}
+
+#index-left-img {
+    background-image: url(Pictures/Pfad_8.svg);
+}
