--- a/ClientSide/stylesheet.css
+++ b/ClientSide/stylesheet.css
@@ -29,11 +29,6 @@ body {
     background-color: wheat !important;
 }
 
-#index-img-down-right {
-    position: absolute;
-    right: 0;
-}
-
 #index-img-smiley {
     max-width: 100%;
     max-height: 100%;
@@ -51,6 +46,9 @@ body {
 
 #index-right-backimg {
     background-image: url(Pictures/Pfad_7.svg);
+    --offset: var(--space);
+    position: sticky;
+    top: var(--offset);
 }
 
 #index-right-textblock {
@@ -72,6 +70,9 @@ body {
 
 #index-left-img {
     background-image: url(Pictures/Pfad_8.svg);
+    --offset: var(--space);
+    position: sticky;
+    top: var(--offset);
 }
 
 #index-left-logo {
